--- a/www/footer.html
+++ b/www/footer.html
@@ -16,6 +16,13 @@
             </ul>
         </div>
 		
+		<div class="col-sm-3">
+            <p>Citation</p>
+            <ul>
+                <h4><a href="https://doi.org/10.1093/bioinformatics/btz186" target="_blank">Yao et al. 2019 Bioinformatics</a></h4>
+            </ul>
+        </div>   
+		
     </div>
 </div>
 
