--- a/www/footer.html
+++ b/www/footer.html
@@ -23,6 +23,12 @@
             </ul>
         </div>   
 		
+		<div class="col-sm-3">
+			<div style="display:inline-block;width:400px;">
+				<script type="text/javascript" src="//rf.revolvermaps.com/0/0/7.js?i=5c6qe3wpw26&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;sx=0" async="async"></script>
+			</div>
+        </div>
+		
     </div>
 </div>
 
